Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111706

Keyboard Can not input when open into a page

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.6.0
    • 6.5.0 Beta3
    • None
    • ubuntu20.04
    • WebAssembly
    • d34259d96 (dev)

    Description

      Keyboard Can not input when open into a page
      so, i use JS code to init when i open a page to deal this problem: 
      document.getElementById("qtcanvas").focus(); //ok in sdk  qt6.4.1-bata2
      otherwise, i must click mainwidget for keyboard input
      but, it is lose now:
      document.getElementById("screen").focus(); //invliad in sdk  qt6.5.0-bata2
      about mouse rightbutton advice: 
      document.oncontextmenu = function(){event.returnValue = false;};

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-111706
          # Subject Branch Project Status CR V

          Activity

            People

              mikolaj.boc Mikołaj Boc (Inactive)
              cigepan aaa bbb
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes